--- a/Source/LJH.Attendance.UI/FrmMain.resx
+++ b/Source/LJH.Attendance.UI/FrmMain.resx
@@ -121,6 +121,85 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="系统ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
+  </data>
+  <data name="系统ToolStripMenuItem.Text" xml:space="preserve">
+    <value>系统</value>
+  </data>
+  <data name="mnu_基本资料.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 21</value>
+  </data>
+  <data name="mnu_基本资料.Text" xml:space="preserve">
+    <value>基本资料</value>
+  </data>
+  <data name="考勤管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 21</value>
+  </data>
+  <data name="考勤管理ToolStripMenuItem.Text" xml:space="preserve">
+    <value>考勤管理</value>
+  </data>
+  <data name="安全管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 21</value>
+  </data>
+  <data name="安全管理ToolStripMenuItem.Text" xml:space="preserve">
+    <value>安全管理</value>
+  </data>
+  <data name="报表ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
+  </data>
+  <data name="报表ToolStripMenuItem.Text" xml:space="preserve">
+    <value>报表</value>
+  </data>
+  <data name="mnu_BackupData.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
+  </data>
+  <data name="mnu_BackupData.Text" xml:space="preserve">
+    <value>备份数据</value>
+  </data>
+  <data name="mnu_UpdateDB.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
+  </data>
+  <data name="mnu_UpdateDB.Text" xml:space="preserve">
+    <value>升级数据库</value>
+  </data>
+  <data name="维护ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
+  </data>
+  <data name="维护ToolStripMenuItem.Text" xml:space="preserve">
+    <value>维护</value>
+  </data>
+  <data name="帮助ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
+  </data>
+  <data name="帮助ToolStripMenuItem.Text" xml:space="preserve">
+    <value>帮助</value>
+  </data>
+  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>901, 25</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>19</value>
+  </data>
+  <data name="menuStrip1.Text" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
   <data name="mnu_Logout.Size" type="System.Drawing.Size, System.Drawing">
     <value>124, 22</value>
   </data>
@@ -132,12 +211,6 @@
   </data>
   <data name="mnu_Exit.Text" xml:space="preserve">
     <value>退出系统</value>
-  </data>
-  <data name="系统ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 21</value>
-  </data>
-  <data name="系统ToolStripMenuItem.Text" xml:space="preserve">
-    <value>系统</value>
   </data>
   <data name="mnu_Departments.Size" type="System.Drawing.Size, System.Drawing">
     <value>148, 22</value>
@@ -196,7 +269,6 @@
   <data name="toolStripSeparator8.Size" type="System.Drawing.Size, System.Drawing">
     <value>145, 6</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="toolStripSeparator8.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
@@ -209,56 +281,44 @@
   <data name="mnu_Options.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="mnu_基本资料.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 21</value>
-  </data>
-  <data name="mnu_基本资料.Text" xml:space="preserve">
-    <value>基本资料</value>
-  </data>
   <data name="mnu_AttendanceRules.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>148, 22</value>
   </data>
   <data name="mnu_AttendanceRules.Text" xml:space="preserve">
     <value>考勤规则</value>
   </data>
   <data name="mnu_Shifts.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>148, 22</value>
   </data>
   <data name="mnu_Shifts.Text" xml:space="preserve">
     <value>班次管理</value>
   </data>
   <data name="mnu_ShiftTemplate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>148, 22</value>
   </data>
   <data name="mnu_ShiftTemplate.Text" xml:space="preserve">
     <value>排班模板</value>
   </data>
   <data name="mnu_ShiftArrange.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>148, 22</value>
   </data>
   <data name="mnu_ShiftArrange.Text" xml:space="preserve">
     <value>人员排班</value>
   </data>
   <data name="toolStripSeparator7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 6</value>
+    <value>145, 6</value>
   </data>
   <data name="mnu_ManualLog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>148, 22</value>
   </data>
   <data name="mnu_ManualLog.Text" xml:space="preserve">
     <value>补签</value>
   </data>
   <data name="mnu_AttendanceAnalyst.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>148, 22</value>
   </data>
   <data name="mnu_AttendanceAnalyst.Text" xml:space="preserve">
     <value>生成考勤结果</value>
-  </data>
-  <data name="考勤管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 21</value>
-  </data>
-  <data name="考勤管理ToolStripMenuItem.Text" xml:space="preserve">
-    <value>考勤管理</value>
   </data>
   <data name="mnu_Operator.Size" type="System.Drawing.Size, System.Drawing">
     <value>136, 22</value>
@@ -280,12 +340,6 @@
   </data>
   <data name="mnu_ChangePWD.Text" xml:space="preserve">
     <value>修改密码</value>
-  </data>
-  <data name="安全管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 21</value>
-  </data>
-  <data name="安全管理ToolStripMenuItem.Text" xml:space="preserve">
-    <value>安全管理</value>
   </data>
   <data name="mnu_ShiftResultStatistics.Size" type="System.Drawing.Size, System.Drawing">
     <value>172, 22</value>
@@ -314,14 +368,8 @@
   <data name="mnu_AttendanceLogReport.Text" xml:space="preserve">
     <value>原始考勤记录查询</value>
   </data>
-  <data name="报表ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 21</value>
-  </data>
-  <data name="报表ToolStripMenuItem.Text" xml:space="preserve">
-    <value>报表</value>
-  </data>
   <data name="用户手册ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="用户手册ToolStripMenuItem.Text" xml:space="preserve">
     <value>用户手册</value>
@@ -330,44 +378,38 @@
     <value>False</value>
   </data>
   <data name="mnu_Aboat.Size" type="System.Drawing.Size, System.Drawing">
-    <value>124, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_Aboat.Text" xml:space="preserve">
     <value>关于...</value>
   </data>
-  <data name="帮助ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 21</value>
-  </data>
-  <data name="帮助ToolStripMenuItem.Text" xml:space="preserve">
-    <value>帮助</value>
-  </data>
-  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>901, 25</value>
-  </data>
-  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
-    <value>19</value>
-  </data>
-  <data name="menuStrip1.Text" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>137, 17</value>
   </metadata>
+  <data name="toolStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 25</value>
+  </data>
+  <data name="toolStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>901, 64</value>
+  </data>
+  <data name="toolStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>20</value>
+  </data>
+  <data name="toolStrip1.Text" xml:space="preserve">
+    <value>toolStrip1</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Name" xml:space="preserve">
+    <value>toolStrip1</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
+    <value>LJH.GeneralLibrary.WinformControl.MyToolStrip, LJH.GeneralLibrary, Version=2.0.2013.1011, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
   <data name="btnDepartment.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
   </data>
@@ -543,39 +585,9 @@
   <data name="btnAttendanceLog.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
     <value>ImageAboveText</value>
   </data>
-  <data name="toolStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 25</value>
-  </data>
-  <data name="toolStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>901, 64</value>
-  </data>
-  <data name="toolStrip1.TabIndex" type="System.Int32, mscorlib">
-    <value>20</value>
-  </data>
-  <data name="toolStrip1.Text" xml:space="preserve">
-    <value>toolStrip1</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Name" xml:space="preserve">
-    <value>toolStrip1</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
-    <value>LJH.GeneralLibrary.WinformControl.MyToolStrip, LJH.GeneralLibrary, Version=2.0.2013.1011, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>247, 17</value>
   </metadata>
-  <data name="lblOperator.Font" type="System.Drawing.Font, System.Drawing">
-    <value>宋体, 9pt, style=Bold</value>
-  </data>
-  <data name="lblOperator.Size" type="System.Drawing.Size, System.Drawing">
-    <value>4, 17</value>
-  </data>
   <data name="statusStrip1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 333</value>
   </data>
@@ -599,6 +611,12 @@
   </data>
   <data name="&gt;&gt;statusStrip1.ZOrder" xml:space="preserve">
     <value>1</value>
+  </data>
+  <data name="lblOperator.Font" type="System.Drawing.Font, System.Drawing">
+    <value>宋体, 9pt, style=Bold</value>
+  </data>
+  <data name="lblOperator.Size" type="System.Drawing.Size, System.Drawing">
+    <value>4, 17</value>
   </data>
   <data name="ucFormViewMain.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -3358,6 +3376,12 @@
   <data name="&gt;&gt;btnShift.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;btnShiftTemplate.Name" xml:space="preserve">
+    <value>btnShiftTemplate</value>
+  </data>
+  <data name="&gt;&gt;btnShiftTemplate.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;btnShiftArrange.Name" xml:space="preserve">
     <value>btnShiftArrange</value>
   </data>
@@ -3412,11 +3436,23 @@
   <data name="&gt;&gt;lblOperator.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;btnShiftTemplate.Name" xml:space="preserve">
-    <value>btnShiftTemplate</value>
+  <data name="&gt;&gt;维护ToolStripMenuItem.Name" xml:space="preserve">
+    <value>维护ToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;btnShiftTemplate.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;维护ToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;mnu_BackupData.Name" xml:space="preserve">
+    <value>mnu_BackupData</value>
+  </data>
+  <data name="&gt;&gt;mnu_BackupData.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;mnu_UpdateDB.Name" xml:space="preserve">
+    <value>mnu_UpdateDB</value>
+  </data>
+  <data name="&gt;&gt;mnu_UpdateDB.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>FrmMain</value>
